Enabled pwa as a starting point for notification system. Passed all the tests from Google's Lighthouse

--- a/ifarmo-client/src/app.html
+++ b/ifarmo-client/src/app.html
@@ -2,6 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<link rel="manifest" href="/manifest.json">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#4CAF50">
+		<link rel="apple-touch-icon" href="/logo.png"/>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
